fix: change dark mode background color to black and refine layout component templates

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -53,14 +53,14 @@
 }
 
 .dark {
-  --background: oklch(21.8% 0.000000000000000105 0deg);
+  --background: oklch(0% 0 0);
   --foreground: oklch(83.768% 0.001 17.911);
   --foreground-active: oklch(100% 0.00011 271.152);
 
-  --card: oklch(19.8% 0.000000000000000105 0deg);
+  --card: oklch(0% 0 0);
   --card-foreground: oklch(83.768% 0.001 17.911);
 
-  --popover: oklch(19.8% 0.000000000000000105 0deg);
+  --popover: oklch(0% 0 0);
   --popover-foreground: oklch(83.768% 0.001 17.911);
 
   --primary: oklch(30.698% 0.039 171.364);
